[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Screen/MainScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/UserInterface/SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/climb_tuto.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Play"
length = 4.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42 ]
}

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
modeScoreScenePath = "res://src/Levels/LevelScore.tscn"
modeTimeTrialScenePath = "res://src/Levels/LevelTimeTrial.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.235294, 0.337255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1280.0
margin_top = -542.378
margin_bottom = 537.622
color = Color( 0.0509804, 0.168627, 0.270588, 0.294118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -540.0
margin_bottom = 540.0
color = Color( 0.0509804, 0.168627, 0.270588, 0.294118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 615.0
margin_bottom = 1055.0
custom_constants/separation = 100

[node name="Title" type="Label" parent="Margin/VBox"]
margin_right = 590.0
margin_bottom = 40.0
text = "TITLE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Margin/VBox"]
margin_left = 95.0
margin_top = 140.0
margin_right = 495.0
margin_bottom = 440.0
rect_min_size = Vector2( 400, 300 )
size_flags_horizontal = 4
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Margin/VBox/Menu"]
margin_right = 400.0
margin_bottom = 83.0
size_flags_vertical = 3
text = "NEWGAME"

[node name="SettingsButton" type="Button" parent="Margin/VBox/Menu"]
margin_top = 108.0
margin_right = 400.0
margin_bottom = 191.0
size_flags_vertical = 3
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="Margin/VBox/Menu"]
margin_top = 216.0
margin_right = 400.0
margin_bottom = 300.0
size_flags_vertical = 3
text = "QUIT"

[node name="Credits" type="Label" parent="Margin/VBox"]
margin_top = 540.0
margin_right = 590.0
margin_bottom = 580.0
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creator" type="Label" parent="Margin/VBox"]
margin_top = 680.0
margin_right = 590.0
margin_bottom = 720.0
text = "CREATOR"

[node name="GameModes" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -540.0
margin_right = 320.0
margin_bottom = 540.0
custom_constants/margin_right = 25
custom_constants/margin_top = 100
custom_constants/margin_left = 25
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="GameModes"]
margin_left = 120.0
margin_top = 100.0
margin_right = 520.0
margin_bottom = 980.0
rect_min_size = Vector2( 400, 400 )
size_flags_horizontal = 4
custom_constants/separation = 50

[node name="GameMode" type="Label" parent="GameModes/VBox"]
margin_right = 400.0
margin_bottom = 40.0
text = "GAMEMODE"
align = 1

[node name="ModeScore" type="Button" parent="GameModes/VBox"]
margin_top = 90.0
margin_right = 400.0
margin_bottom = 250.0
size_flags_vertical = 3
text = "GMSCORE"

[node name="ScoreTraining" type="Button" parent="GameModes/VBox"]
margin_top = 300.0
margin_right = 400.0
margin_bottom = 460.0
size_flags_vertical = 3
text = "GMSTRAIN"

[node name="ModeTime" type="Button" parent="GameModes/VBox"]
margin_top = 510.0
margin_right = 400.0
margin_bottom = 670.0
size_flags_vertical = 3
text = "GMTIME"

[node name="TimeTraining" type="Button" parent="GameModes/VBox"]
margin_top = 720.0
margin_right = 400.0
margin_bottom = 880.0
size_flags_vertical = 3
text = "GMTTRAIN"

[node name="ClimbTuto" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -540.0
margin_bottom = 540.0
custom_constants/margin_right = 0
custom_constants/margin_top = 50
custom_constants/margin_left = 0
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="ClimbTuto"]
margin_top = 50.0
margin_right = 640.0
margin_bottom = 1030.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ClimbTuto/VBox"]
margin_left = 240.0
margin_right = 400.0
margin_bottom = 40.0
size_flags_horizontal = 6
text = "CLIMBTUTO"
align = 1

[node name="Sprite" type="Sprite" parent="ClimbTuto/VBox"]
position = Vector2( 320, 540 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
hframes = 5
vframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="ClimbTuto/VBox/Sprite"]
autoplay = "Play"
anims/Play = SubResource( 1 )

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]

[connection signal="button_up" from="Margin/VBox/Menu/PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="Margin/VBox/Menu/SettingsButton" to="." method="_on_SettingsButton_button_up"]
[connection signal="button_up" from="Margin/VBox/Menu/QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="button_up" from="GameModes/VBox/ModeScore" to="." method="_on_ModeScore_button_up"]
[connection signal="button_up" from="GameModes/VBox/ScoreTraining" to="." method="_on_ModeTraining_button_up"]
[connection signal="button_up" from="GameModes/VBox/ModeTime" to="." method="_on_ModeTime_button_up"]
[connection signal="button_up" from="GameModes/VBox/TimeTraining" to="." method="_on_TimeTraining_button_up"]
